--- a/templates/artico3_app_linux/Makefile
+++ b/templates/artico3_app_linux/Makefile
@@ -21,7 +21,7 @@ LDLIBS_ARTICo3 = -lm -lpthread
 
 CFLAGS_APP = $(CFLAGS_IN)-Wall -Wextra -I runtime <a3<CFLAGS>a3>
 LDFLAGS_APP = $(LDFLAGS_IN)-L . -Wl,-R,. <a3<LDFLAGS>a3>
-LDLIBS_APP = -lartico3 -lm -lpthread <a3<LDLIBS>a3>
+LDLIBS_APP = -lartico3 -lm -lpthread -lrt <a3<LDLIBS>a3>
 
 OBJS1 = runtime/artico3_rcfg.o runtime/artico3_hw.o runtime/artico3.o
 ARTICo3_OBJS = $(OBJS1:%=_build/%)
